apps/base/alist/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: alist
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
